# voice-satellite

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  Dockerfile.squeezelite  actions.py  audio_io.py  communications.py  config.py  docker-compose.yml  download_models.py  flake.nix  lel.sh  main.py  orchestrator_client.py  output.srt  pyproject.toml  requirements.txt  result  storage_client.py  stt_client.py  test_silero.py  vad.py  verify_audio.py
