[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-satellite"
version = "0.1.0"
description = "Voice Assistant Satellite Client"
requires-python = ">=3.11"
dependencies = [
    "av",                # For PyAV
    "PyAudio",           # For microphone access
    "pydub",             # Audio manipulation
    "openwakeword",      # Wake word detection
    "onnxruntime",       # Inference engine for openwakeword
    "numpy",
    "scipy",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "tqdm",
    "aiomqtt",           
    "boto3"             
]

[project.scripts]
# Main entry point
voice-satellite = "main:main"

satellite-download-models = "download_models:main"
satellite-get-device-indices = "get_device_indices:main"

[tool.setuptools]
# Explicitly list modules because of the flat layout
py-modules = [
    "main",
    "config",
    "audio_io",
    "vad",
    "actions",         
    "storage_client",   
    "download_models",
    "get_device_indices" 
]
